// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`StatusBar matches snapshot with default props 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Ready | Branch: main | Agent: claude-code                           Press q to quit | ? for help │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`StatusBar matches snapshot with custom props 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Buildin | Branch:feature-bran | Worktree:feature-12 | Agent:cursor-agenPressq to quit |? for help│
│                  h                                          t                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;
